force-app/main/default/objects/Currency_Exchange_Rates__c/Currency_Exchange_Rates__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to bring currency exchange rates into formulas</description>
    <label>Currency Exchange Rates</label>
</CustomObject>