force-app/main/default/objects/Currency_Exchange_Rates__c/fields/CAD__c.field-meta.xml
<CustomField>
    <fullName>CAD__c</fullName>
    <label>CAD</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>