force-app/main/default/objects/Currency_Exchange_Rates__c/fields/CHF__c.field-meta.xml
<CustomField>
    <fullName>CHF__c</fullName>
    <label>CHF</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>