force-app/main/default/objects/Currency_Exchange_Rates__c/fields/EUR__c.field-meta.xml
<CustomField>
    <fullName>EUR__c</fullName>
    <label>EUR</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>