force-app/main/default/objects/Currency_Exchange_Rates__c/fields/GBP__c.field-meta.xml
<CustomField>
    <fullName>GBP__c</fullName>
    <label>GBP</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>