force-app/main/default/objects/Currency_Exchange_Rates__c/fields/HKD__c.field-meta.xml
<CustomField>
    <fullName>HKD__c</fullName>
    <label>HKD</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>